# sapi-python-client

./: .codeclimate.yml  .dockerignore  .env.template  .gitignore  .travis.yml  Dockerfile  LICENSE.txt  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  sapiclient.py  setup.py
.github/workflows/: push.yml
kbcstorage/: __init__.py  base.py  branches.py  buckets.py  client.py  components.py  configurations.py  configurations_metadata.py  files.py  jobs.py  retry_requests.py  tables.py  tables_metadata.py  tokens.py  triggers.py  workspaces.py
kbcstorage/dataclasses/: __init__.py  tables.py
tests/: base_test_case.py  job_responses.py  table_responses.py  test_base.py  test_buckets.py  test_client.py  test_functional_buckets.py  test_functional_client.py  test_functional_files.py  test_functional_tables.py  test_jobs.py  test_tables.py  test_workspaces.py  test_workspaces_endpoint.py  workspace_responses.py
tests/functional/: test_base.py  test_branches.py  test_buckets.py  test_client.py  test_components.py  test_configurations.py  test_files.py  test_tables.py  test_tables_definition.py  test_tokens.py  test_triggers.py  test_workspaces.py  test_workspaces_abs.py
tests/mocks/: branches_responses.py  bucket_responses.py  component_responses.py  configuration_responses.py  table_responses.py  test_branches.py  test_buckets.py  test_client.py  test_components.py  test_configurations.py  test_jobs.py  test_retry.py  test_tables.py  test_tokens.py  test_triggers.py  test_workspaces.py  token_responses.py  triggers_responses.py  workspace_responses.py
