[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kbcstorage"
authors = [
    {name = "Keboola", email = "developers@keboola.com"},
]
description = "Client for Keboola Storage API"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["keboola", "storage"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "boto3",
    "azure-storage-blob",
    "urllib3<2.0.0",  # Frozen until fixed: https://github.com/boto/botocore/issues/2926
    # Dev dependencies
    "requests",
    "responses",
    "python-dotenv",
]
dynamic = ["version"]
